[package]
name = "lib-modulo"
authors = ["qdot3"]
version = "0.7.0-alpha-4"
edition = "2021"

license = "Apache-2.0 OR MIT"

description = "Fast modular arithmetic"
repository = "https://github.com/qdot3/montgomery"
keywords = ["modular", "residue", "montgomery", "plantard", "barrett"]
categories = ["mathematics"]

[dependencies]

[dev-dependencies]
criterion = "0.8.2"
proptest = "1.11.0"
rand = "0.9.2"
