[package]
name = "lib-modulo"
authors = ["qdot3"]
version = "0.8.0-alpha-4"
edition = "2021"

license = "Apache-2.0 OR MIT"

description = "Fast modular arithmetic"
repository = "https://github.com/qdot3/montgomery"
keywords = ["no_std", "residue", "montgomery", "plantard", "barrett"]
categories = ["mathematics"]

[dependencies]

[dev-dependencies]
proptest = "1.11.0"
rand = "0.9.2"
